--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebbyWolf - We Craft Websites</title>
+    <link rel="shortcut icon" href="media/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:400,400i,500,500i,700,700i,900,900i"
         rel="stylesheet">
@@ -21,7 +22,7 @@
             <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand font-weight-bold pl-xl-5 col px-0 mx-0 ml-lg-5 text-white" href="index.html"
+            <a class="navbar-brand font-weight-bold pl-xl-5 col px-0 mx-0 ml-lg-5 text-white" href="/index"
                 style="font-size: 32px;">Webby<span class="yellow-text">Wolf</span>
             </a>
 
@@ -29,27 +30,27 @@
                 id="navbarSupportedContent">
                 <ul class="navbar-nav font-weight-bold align-self-stretch h-100 py-3 py-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="index.html">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/index">
                             <i class="fa fa-home pr-2" aria-hidden="true"></i>
                             Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="#">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/services">
                             <i class="fas fa-toolbox pr-2" aria-hidden="true"></i>
                             Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="plans.html">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/plans">
                             <i class="far fa-map pr-2" aria-hidden="true"></i>
                             Plans</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="about.html">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/about">
                             <i class="fas fa-paper-plane pr-2" aria-hidden="true"></i>
                             About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="contact.html">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/contact">
                             <i class="fas fa-envelope pr-2" aria-hidden="true"></i>
                             Contact</a>
                     </li>
@@ -83,13 +84,13 @@
                         <h2 class="h2 mdb-color-text">Want Your Own Awesome Website For Your Buisness or StartUp?</h2>
                         <div class="row no-gutters col-lg-10 m-0 p-0 justify-content-start">
                             <div class="">
-                                <a href="contact.html" class="btn btn-warning rounded-pill">
+                                <a href="/contact" class="btn btn-warning rounded-pill">
                                     Contact Now
                                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
                                 </a>
                             </div>
                             <div class="">
-                                <a href="plans.html" class="btn btn-primary rounded-pill">
+                                <a href="/plans" class="btn btn-primary rounded-pill">
                                     View Plans
                                     <i class="far fa-map pl-2" aria-hidden="true"></i>
                                 </a>
@@ -156,7 +157,7 @@
 
 
         <!-- Actions -->
-        <div class="my-4 actions px-3">
+        <div class="my-4 actions px-3 py-5">
             <div
                 class="col-12 col-xl-10 mx-auto row no-gutters p-0 bg-white shadow-lg border px-2 mb-4 py-3 border-rounded">
                 <div class="col-12 col-md-4 d-flex justify-content-center align-items-center p-0">
@@ -171,7 +172,7 @@
                             Presence Is
                             So Important, And It Will Grow More In Post-Covid World. Take You Buisness Online With Us.
                         </p>
-                        <a href="contact.html" class="btn orange text-white rounded-pill py-md-2 px-md-3">
+                        <a href="/contact" class="btn orange text-white rounded-pill py-md-2 px-md-3">
                             Contact Now
                             <i class="fa fa-arrow-right pl-1" aria-hidden="true"></i>
                         </a>
@@ -191,7 +192,7 @@
                             Choose From Our Basic, Stadard & Advanced Plans And Choose The One Which Fulfills Your
                             Requirements. We Will Provide You An Amazing Website According To Your Need.
                         </p>
-                        <a href="plans.html" class="btn indigo text-white rounded-pill py-md-2 px-md-3">
+                        <a href="/plans" class="btn indigo text-white rounded-pill py-md-2 px-md-3">
                             View Plans
                             <i class="fa fa-arrow-right pl-1" aria-hidden="true"></i>
                         </a>
@@ -211,13 +212,14 @@
                             We Have Wrote An Awesome Guiding Blog About - "Why Do You Need A Website?". Check It Out, It
                             Will Help You To Understand Why Website Is Important In This Digital Woorld.
                         </p>
-                        <a href="#" class="btn orange text-white rounded-pill py-md-2 px-md-3">
+                        <a href="#blog" class="btn orange text-white rounded-pill py-md-2 px-md-3">
                             Go To Blog
                             <i class="fa fa-arrow-right pl-1" aria-hidden="true"></i>
                         </a>
                     </div>
                 </div>
             </div>
+            <a id="blog"></a>
         </div>
         <!-- Actions -->
 
@@ -389,8 +391,7 @@
                             Presence Is
                             So Important, And It Will Grow More In Post-Covid World. Take You Buisness Online With Us.
                         </p>
-                        <a href="contact.html"
-                            class="btn orange text-white rounded-pill py-md-2 px-md-3 font-weight-bold">
+                        <a href="/contact" class="btn orange text-white rounded-pill py-md-2 px-md-3 font-weight-bold">
                             Contact Now
                             <i class="fa fa-arrow-right" aria-hidden="true"></i>
                         </a>
@@ -415,7 +416,7 @@
                     <h5 class="mb-1">Let's Make An Awesome Website For You Too.!</h5>
                 </li>
                 <li class="list-inline-item">
-                    <a href="contact.html" class="btn btn-outline-white rounded-pill">
+                    <a href="/contact" class="btn btn-outline-white rounded-pill">
                         Contact Now
                         <i class="fa fa-arrow-right" aria-hidden="true"></i>
                     </a>
