--- a/plans.html
+++ b/plans.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebbyWolf - We Craft Websites</title>
+    <link rel="shortcut icon" href="media/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:400,400i,500,500i,700,700i,900,900i"
         rel="stylesheet">
@@ -21,7 +22,7 @@
             <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand font-weight-bold pl-xl-5 col px-0 mx-0 ml-lg-5 text-white" href="index.html"
+            <a class="navbar-brand font-weight-bold pl-xl-5 col px-0 mx-0 ml-lg-5 text-white" href="/index"
                 style="font-size: 32px;">Webby<span class="yellow-text">Wolf</span>
             </a>
 
@@ -29,27 +30,27 @@
                 id="navbarSupportedContent">
                 <ul class="navbar-nav font-weight-bold align-self-stretch h-100 py-3 py-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="index.html">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/index">
                             <i class="fa fa-home pr-2" aria-hidden="true"></i>
                             Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="#">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/services">
                             <i class="fas fa-toolbox pr-2" aria-hidden="true"></i>
                             Services</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="plans.html">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/plans">
                             <i class="far fa-map pr-2" aria-hidden="true"></i>
                             Plans <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="about.html">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/about">
                             <i class="fas fa-paper-plane pr-2" aria-hidden="true"></i>
                             About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="contact.html">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/contact">
                             <i class="fas fa-envelope pr-2" aria-hidden="true"></i>
                             Contact</a>
                     </li>
@@ -108,7 +109,7 @@
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>Easy To Use Admin Panel</li>
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>PoP-Ups</li>
                         </ul>
-                        <a href="contact.html"
+                        <a href="/contact"
                             class="btn btn-block btn-blue z-depth-0 rounded-pill font-weight-bold my-2">Contact
                             <i class="fa fa-arrow-right pl-1" aria-hidden="true"></i>
                         </a>
@@ -143,7 +144,7 @@
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>You Can Add More Feaatures
                                 According To Your Need</li>
                         </ul>
-                        <a href="contact.html"
+                        <a href="/contact"
                             class="btn btn-block btn-blue z-depth-0 rounded-pill font-weight-bold my-2">Contact
                             <i class="fa fa-arrow-right pl-1" aria-hidden="true"></i>
                         </a>
@@ -175,7 +176,7 @@
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>User Wallet Integration</li>
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>Refferal System Integration</li>
                         </ul>
-                        <a href="contact.html"
+                        <a href="/contact"
                             class="btn btn-block btn-blue z-depth-0 rounded-pill font-weight-bold my-2">Contact
                             <i class="fa fa-arrow-right pl-1" aria-hidden="true"></i>
                         </a>
@@ -262,7 +263,7 @@
                     <h5 class="mb-1">Let's Make An Awesome Website For You Too.!</h5>
                 </li>
                 <li class="list-inline-item">
-                    <a href="contact.html" class="btn btn-outline-white rounded-pill">
+                    <a href="/contact" class="btn btn-outline-white rounded-pill">
                         Contact Now
                         <i class="fa fa-arrow-right" aria-hidden="true"></i>
                     </a>
