--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
 
         <!-- blog -->
         <div class="row no-gutters px-3 my-4">
-            <div class="col-12 py-3 need-of-website-blog">
-                <h1 class="display-6 text-center mdb-color-text font-weight-bold">Why Do You Need A Website?</h1>
+            <div class="col-12 py-3 need-of-website-blog px-0">
+                <h1 class="display-6 text-center mdb-color-text font-weight-bold mx-0">Why Do You Need A Website?</h1>
                 <hr class="py-1 rounded-pill aqua-gradient col-2 mx-auto">
                 <div class="col-12 col-lg-8 m-0 p-0 mx-auto">
                     <img src="media/laptop-img.jpg" alt="" class="img-fluid rounded-lg">
