--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4 py-2 px-4 px-lg-2 px-xl-4">
                 <div class="feature-card bg-white shadow-lg border-rounded pt-5 pb-4">
-                    <div class="card-img d-flex">
+                    <div class="card-img d-flex justify-content-center align-items-center">
                         <img src="media/seo-img.jpg" alt="" class="img-fluid rounded-circle mx-auto w-50">
                     </div>
                     <div class="card-body px-4 text-justify">
@@ -126,7 +126,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4 py-2 px-4 px-lg-2 px-xl-4">
                 <div class="feature-card bg-white shadow-lg border-rounded pt-5 pb-4">
-                    <div class="card-img d-flex">
+                    <div class="card-img d-flex justify-content-center align-items-center">
                         <img src="media/responsive-img.jpg" alt="" class="img-fluid rounded-circle mx-auto w-50">
                     </div>
                     <div class="card-body px-4 text-justify">
@@ -140,7 +140,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4 py-2 px-4 px-lg-2 px-xl-4">
                 <div class="feature-card bg-white shadow-lg border-rounded pt-5 pb-4">
-                    <div class="card-img d-flex">
+                    <div class="card-img d-flex justify-content-center align-items-center">
                         <img src="media/secure-img.jpg" alt="" class="img-fluid rounded-circle mx-auto w-50">
                     </div>
                     <div class="card-body px-4 text-justify">
