--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
                         <h2 class="bold-heading mdb-color-text">Email Us</h2>
                         <hr class="pt-1 col-1 rounded-pill mx-auto my-1 bg-danger">
                         <p class="blue-grey-text">
-                            Let's Get Connected On Call
+                            Let's Connect Via Email
                         </p>
                         <a href="mailto:info.webbywolf@gmail.com"
                             class="btn blue-grey text-white rounded-pill font-weight-bold btn-sm">Email Now</a>
@@ -117,10 +117,10 @@
                         <i class="fab fa-whatsapp fa-6x text-warning" aria-hidden="true"></i>
                     </div>
                     <div class="better-text font-weight-bold text-center col-8">
-                        <h2 class="bold-heading mdb-color-text">Call Now</h2>
+                        <h2 class="bold-heading mdb-color-text">Whatsapp Now</h2>
                         <hr class="pt-1 col-1 rounded-pill mx-auto my-1 bg-danger">
                         <p class="blue-grey-text">
-                            Let's Get Connected On Call
+                            Let's Chat On Whatsapp
                         </p>
                         <a href="https://api.whatsapp.com/send?phone=919518760250&text=hey%20webbywolf,%20I%20want%20to%20build%20my%20Awesome%20Website..."
                             class="btn btn-warning rounded-pill font-weight-bold btn-sm">Whatsapp</a>
