--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebbyWolf - We Craft Websites</title>
+    <meta name="description" content= "WebbyWolf Helps You Built Your Digital Presence, With The Help Of Various Technologies. We Will Keep Improving The Site till 100% Satiscfaction" />
+    <meta name="Keywords" content="web development, website development, web developer, web development in mumbai, webbywolf, wbbywolf web development, web designing, web development site, web development company, web development agency mumbai, web development agency, web developer in mumbai, web developer in india, best web developer in mumbai">
+    <meta name="robots" content= "index, follow">
+    <title>WebbyWolf - We Craft Awesome Websites For Buisnesses/StartUps</title>
     <link rel="shortcut icon" href="media/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:400,400i,500,500i,700,700i,900,900i"
